--- a/index.html
+++ b/index.html
@@ -6,16 +6,43 @@
   <title>TestPage: Don't Panic</title>
   <style>
     /* Global Styles */
-    a {
-      color: blue;
+    html, body {
+      margin: 0;
+      padding: 0;
     }
+    h1 {
+      font-size: 2em;
+      margin-top: 0;
+    }
+    a {
+      color: #f00;
+    }
+    /* Hero Styles */
+    .full-hero {
+      background-color: #c7dbfc;
+      height: 50vh;
+
+    }
+
     /* Social Styles*/
     .social-link {
-      color: purple;
+      background: rgba(150, 150, 150, 0.5);
+      color: blue;
     }
     /* Bio Styles*/
+    .bio-wrapper {
+      font-size: 24px;
+    }
     .bio-box {
       border: 1px solid black;
+      font-size: 1rem;
+      width: 50%;
+    }
+    .bio-box h3 {
+      font-size: 1.5em;
+    }
+    .bio-copy {
+      font-size: 1em;
     }
     .bio-copy a {
       color: green;
@@ -24,20 +51,23 @@
 </head>
 
 <body>
-  <h1>I'm an h1</h1>
-  <ul>
-    <li>
-      <a href="https://example.com/">Link</a>
-    </li>
-    <li>
-      <a href="https://example.com/">Link</a>
-    </li>
-    <li>
-      <a href="https://example.com/">Link</a>
-    </li>
-  </ul>
+  <div class="full-hero hero-home">
+    <h1>I'm an h1</h1>
+    <ul>
+      <li>
+        <a href="https://example.com/" class="social-link">Link</a>
+      </li>
+      <li>
+        <a href="https://example.com/" class="social-link">Link</a>
+      </li>
+      <li>
+        <a href="https://example.com/" class="social-link">Link</a>
+      </li>
+    </ul>
+  </div>
   <h2>I'm an h2</h2>
-  <div class="bio-box">
+  <div class="bio-wrapper">
+    <div class="bio-box">
       <h3>Michael Hartl</h3>
       <a href="https://twitter.com/mhartl" class="social-link">here</a>
       <div class="bio-copy">
@@ -45,13 +75,13 @@
           Known for his dazzling charm, rapier wit, and unrivaled humility,
           Michael is the creator of the
           <a href="https://www.railstutorial.org/">Ruby on Rails
-          Tutorial</a> and principal author of the
+            Tutorial</a> and principal author of the
           <a href="https://learnenough.com/">
-          Learn Enough to Be Dangerous</a> introductory sequence. Michael
+            Learn Enough to Be Dangerous</a> introductory sequence. Michael
           is also notorious as the founder of
           <a href="http://tauday.com/">Tau Day</a> and author of
           <a href="http://tauday.com/tau-manifesto"><em>The Tau
-          Manifesto</em></a>, but rumors that he's secretly a supervillain
+              Manifesto</em></a>, but rumors that he's secretly a supervillain
           are slightly exaggerated.
         </p>
       </div>
@@ -86,6 +116,7 @@
         The Future
       </p>
     </div>
+  </div>
 </body>
 
 </html>
